syntax = "proto3";

import "SearchResponse.proto";

message PhoneNumber {
    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }
    string number = 1;
    PhoneType type = 2;
    SearchResponse searchResponse = 3;
}